Bug #2959  	UTF8 charset breaks joins with mixed column/string constant